2004-01-24  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/net/Socket/SocketTest.java:
	Added testcase for PR libgcj/13102.

2004-01-12  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/lang/reflect/Other.java: New file.
	* gnu/testlet/java/lang/reflect/ReflectAccess.java:
	Added Uses: tag, moved class "Other" to an extra file.

2004-01-10  Guilhem Lavaux <guilhem@kaffe.org>

	* gnu/testlet/java/text/MessageFormat/attribute.java:
	New testcase for MessageFormat.formatToCharacterIterator.

2004-01-08  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/util/regex/CharacterClasses.java: New file.
	* gnu/testlet/java/util/regex/PatternSplit.java: Likewise.
	* gnu/testlet/java/util/regex/TestHelper.java: Likewise.

2004-01-07  Sascha Brawer  <brawer@dandelis.ch>

	Classpath bug #7123.
	* gnu/testlet/java/awt/geom/QuadCurve2D/solveQuadratic.java
	((x^2)/10 + 20x + 1000 = 0): Add a comment explaining the situation
	on various VMs.

2004-01-07  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/DefaultBoundedRangeModel/
	DefaultBoundedRangeModel.java, setExtent.java, setMaximum.java,
	setMinimum.java, setValue.java: Added "// Uses: setRangeProperties".

2004-01-07  Sascha Brawer  <brawer@dandelis.ch>

	* gnu/testlet/java/awt/geom/QuadCurve2D/solveQuadratic.java: 
	When debug option is set and the result is not as expected,
	emit the actual and expected solutions.
	
2004-01-07  Sascha Brawer  <brawer@dandelis.ch>
	
	* gnu/testlet/javax/swing/undo/CompoundEdit/
	addEdit.java, canRedo.java, canUndo.java, isInProgress.java,
	lastEdit.java: New tests.
	
	* gnu/testlet/javax/swing/undo/UndoableEditSupport/
	UndoableEditSupport.java, createCompoundEdit.java,
	getUndoableEditListeners.java, getUpdateLevel.java: New tests.
	
	Classpath bug #7119.
	* gnu/testlet/javax/swing/undo/UndoableEditSupport/toString.java:
	New test.

2004-01-06  Sascha Brawer  <brawer@dandelis.ch>

	Classpath bug #7109.